Добавлены дополнительные уровни логирования